
innoextract 1.9 (TBD)
 - Added support for a modified Inno Setup 5.4.2 variant
 - Fixed output directory being created for unsupported installers
 - Fixed some safe non-ASCII characters being stripped from filenames
 - Fixed handling of path separators in Japanese and Korean installers

innoextract 1.8 (2019-09-15)
 - Added support for Inno Setup 6.0.0 installers
 - Added support for pre-release Inno Setup 5.6.2 installers used by GOG
 - Added support for two modified Inno Setup 5.5.7 variants
 - Added support for Inno Setup 1.3.0 to 1.3.23
 - Added support for My Inno Setup Extensions installers older than 3.0.6.1
 - Added support for modified Inno Setup variants using an alternative setup loader magic
 - Added support for using boost_{zlib,bzip2} when statically linking Boost
 - Added support for automatically reading external setup.0 files
 - Encoding for non-Unicode installers is now determined from the languages supported by the installer, overridable using the --codepage option
 - Implemented parsing of GOG Galaxy architecture constraints
 - The architecture-specific suffixes @32bit and @64bit are now used to disambiguate colliding files
 - Fixed extracting files from slices larger than 2 GiB with 32-bit builds
 - Fixed output path for files with absolute paths (canonicalization now strips all unsafe characters)
 - Fixed output directory being created even when not extracting files
 - Fixed a hang when using the --language option
 - Improved checksum verification for files reconstructed from GOG Galaxy file parts
 - Changed header parsing to select the first version without warnings and failing that the first without errors
 - Changed filesystem and output encoding to WTF-8 (extended UTF-8) to represent broken UTF-16 data

innoextract 1.7 (2018-06-12)
 - Added support for Inno Setup 5.6.0 installers
 - Added support for new GOG installers with GOG Galaxy file parts
 - Added support for encrypted installers with the --password (-P) and --password-file options