@@ -1,5 +1,6 @@
 
 innoextract 1.9 (TBD)
+ - Added preliminary support for Inno Setup 6.1.0
  - Added support for a modified Inno Setup 5.4.2 variant
  - Fixed output directory being created for unsupported installers
  - Fixed some safe non-ASCII characters being stripped from filenames
